tests/miniJava/neg/000616_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = class new int [ 0 ] ; } }
